Closed
Bug 1134991
Opened 11 years ago
Closed 11 years ago
getUserMedia Audio does not work on Android 2.3 devices
Categories
(Firefox for Android Graveyard :: Audio/Video, defect)
Tracking
(firefox38+ verified, firefox39 verified, fennec38+)
VERIFIED
FIXED
Firefox 39
People
(Reporter: cos_flaviu, Assigned: gcp)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
8.54 KB,
text/plain
|
Details | |
|
4.27 KB,
patch
|
jesup
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Environment:
Device: Samsung Galaxy R (Android 2.3.4);
Build: Nightly 38.0a1 (2015-02-19);
Steps to reproduce:
1. Go to http://mozilla.github.com/webrtc-landing/gum_test.html
2. Select 'Audio & Video';
3. Choose 'Share' option from the doorhanger.
Expected result:
The camera and microphone starts.
Actual result:
'InternalError: Starting audio failed' error is displayed.
Notes:
I attached the logs from LogCat.
| Assignee | ||
Comment 1•11 years ago
|
||
Maybe this?
02-23 11:22:37.450: E/libOpenSLES(1011): Cannot set recording preset: unknown or invalid preset
Assignee: nobody → gpascutto
Updated•11 years ago
|
tracking-fennec: --- → ?
Keywords: regression,
regressionwindow-wanted
| Assignee | ||
Comment 2•11 years ago
|
||
SL_ANDROID_RECORDING_PRESET_VOICE_COMMUNICATION is only avaiable from API level 14 and above but the new opensles code from upstream uses it.
There's similar places in WebRtcAudioRecord.java where backwards compatibility code got removed.
Blocks: 1109248
Keywords: regressionwindow-wanted
| Assignee | ||
Comment 3•11 years ago
|
||
Don't exit OpenSLES initialization if setting the voice mode fails.
It doesn't exist on pre-API level 14 devices.
Attachment #8567195 -
Flags: review?(rjesup)
Updated•11 years ago
|
Attachment #8567195 -
Flags: review?(rjesup) → review+
Updated•11 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•11 years ago
|
||
| Assignee | ||
Comment 5•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 39
Comment 7•11 years ago
|
||
Comment on attachment 8567195 [details] [diff] [review]
Failure to set up voice communication mode in OpenSLES should not be fatal
Approval Request Comment
[Feature/regressing bug #]: webrtc version 40 import
[User impact if declined]: no audio on Android 2.3
[Describe test coverage new/current, TreeHerder]: manual testing; I think many 2.3 tests are disabled
[Risks and why]: Pretty low risk regression fix;
[String/UUID change made/needed]: none
Attachment #8567195 -
Flags: approval-mozilla-aurora?
Updated•11 years ago
|
status-firefox38:
--- → affected
tracking-firefox38:
--- → +
Comment 8•11 years ago
|
||
Comment on attachment 8567195 [details] [diff] [review]
Failure to set up voice communication mode in OpenSLES should not be fatal
Accepting for aurora since it's early in the cycle and fixes a regression.
Attachment #8567195 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 9•11 years ago
|
||
| Reporter | ||
Comment 10•11 years ago
|
||
Verified as fixed in builds:
- 39.0a1 2015-02-26;
- 38.0a2 2015-02-26;
Device: Samsung Galaxy R (Android 2.3.4).
Updated•11 years ago
|
tracking-fennec: ? → 38+
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•