Bug 1134991 - Failure to set up voice communication mode in OpenSLES should not be fatal. r=jesup